--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To-do List</title>
-    <link href="./src/css/output.css" rel="stylesheet">
+    <link href="./src/css/output.css" rel="stylesheet" />
+  </head>
 
-</head>
-
-<body>
+  <body>
+    <main class="flex items-center justify-center h-screen gap-10">
+      <section class="bg-white p-6 rounded-md shadow-md w-4/12">
+        <input name="user-input" class="border-2 py-2 px-6 rounded-md w-full" type="text" placeholder="Digite sua tarefa + Enter" />
+        <nav class="flex items-center justify-between mt-4">
+          <ul class="flex items-center gap-4">
+            <li>Todas</li>
+            <li>Pendentes</li>
+            <li>Realizadas</li>
+          </ul>
+          <button class="py-1 px-4 inline-block rounded-md">Limpar</button>
+        </nav>
+      </section>
+      <section class="flex flex-col gap-2 w-4/12">
+        <h1 class="text-4xl">To-do List</h1>
+        <p class="text-base">Gerencie suas tarefas de forma eficiente com o To-do List. Utilizando JavaScript para adicionar, remover e completar tarefas. Os dados são armazenados localmente no seu navegador usando o Local Storage.</p>
+      </section>
+    </main>
     <script src="./src/js/script.js"></script>
-</body>
-
+  </body>
 </html>
