--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   </head>
 
   <body>
-    <main class="flex items-center justify-center h-screen gap-10">
-      <section class="bg-white p-6 rounded-md shadow-md w-4/12">
-        <input name="user-input" class="border-2 py-2 px-6 rounded-md w-full" type="text" placeholder="Digite sua tarefa + Enter" />
+    <main class="flex items-center justify-center h-screen gap-10 bg-gradient-to-l from-bg-primary to-bg-secondary">
+      <section class="bg-neutral-color p-6 rounded-md shadow-md w-4/12">
+        <input name="user-input" class="border-2 border-gray-300 focus:border-bg-secondary outline-none py-2 px-4 rounded-md w-full transition-all duration-300 ease-in-out" type="text" placeholder="Digite sua tarefa + Enter" />
         <nav class="flex items-center justify-between mt-4">
-          <ul class="flex items-center gap-4">
-            <li>Todas</li>
-            <li>Pendentes</li>
-            <li>Realizadas</li>
-          </ul>
-          <button class="py-1 px-4 inline-block rounded-md">Limpar</button>
+          <div class="flex items-center gap-4">
+            <button class="hover:text-bg-primary">Todas</button>
+            <button class="hover:text-bg-primary">Pendentes</button>
+            <button class="hover:text-bg-primary">Realizadas</button>
+          </div>
+          <button class="py-1 px-4 inline-block rounded-md text-neutral-color bg-btn-color hover:bg-btn-hover">Limpar</button>
         </nav>
       </section>
-      <section class="flex flex-col gap-2 w-4/12">
+      <section class="flex flex-col gap-2 w-4/12 text-neutral-color">
         <h1 class="text-4xl">To-do List</h1>
         <p class="text-base">Gerencie suas tarefas de forma eficiente com o To-do List. Utilizando JavaScript para adicionar, remover e completar tarefas. Os dados são armazenados localmente no seu navegador usando o Local Storage.</p>
       </section>
