metodo para mostrar tarefas realizadas

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
           </div>
           <button class="py-1 px-4 inline-block rounded-md text-neutral-color bg-btn-color hover:bg-btn-hover">Limpar</button>
         </nav>
-        <ul class="flex flex-col gap-4 max-h-48 overflow-y-scroll relative">
+        <ul class="flex flex-col gap-4 max-h-48 overflow-y-scroll">
           <li class="flex items-center justify-between">
             <button onclick="checkTask(event)" class="flex items-center gap-3">
               <input class="w-4 h-4 cursor-pointer checkbox" type="checkbox" />
-              <label class="cursor-pointer name-task">Fazer compras</label>
+              <label class="cursor-pointer task-name">Fazer compras</label>
             </button>
             <button>
               <i class="fa-solid fa-xmark w-4 h-4 text-btn-color"></i>
