metodo para remover todas tarefas

--- a/index.html
+++ b/index.html
@@ -18,18 +18,9 @@
             <button onclick="showPendingTasks()" class="hover:text-bg-primary">Pendentes</button>
             <button onclick="showDoneTasks()" class="hover:text-bg-primary">Realizadas</button>
           </div>
-          <button class="py-1 px-4 inline-block rounded-md text-neutral-color bg-btn-color hover:bg-btn-hover">Limpar</button>
+          <button onclick="clearAllTasks()" class="py-1 px-4 inline-block rounded-md text-neutral-color bg-btn-color hover:bg-btn-hover">Limpar</button>
         </nav>
         <ul class="flex flex-col gap-4 max-h-48 overflow-y-scroll">
-          <li class="flex items-center justify-between">
-            <button onclick="checkTask(event)" class="flex items-center gap-3">
-              <input class="w-4 h-4 cursor-pointer checkbox" type="checkbox" />
-              <label class="cursor-pointer task-name">Fazer compras</label>
-            </button>
-            <button>
-              <i class="fa-solid fa-xmark w-4 h-4 text-btn-color"></i>
-            </button>
-          </li>
         </ul>
       </section>
       <section class="flex flex-col gap-2 w-4/12 text-neutral-color">
