metodo para remover tarefa

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <button onclick="showPendingTasks()" class="hover:text-bg-primary">Pendentes</button>
             <button onclick="showDoneTasks()" class="hover:text-bg-primary">Realizadas</button>
           </div>
-          <button onclick="clearAllTasks()" class="py-1 px-4 inline-block rounded-md text-neutral-color bg-btn-color hover:bg-btn-hover">Limpar</button>
+          <button onclick="removeTasks" class="py-1 px-4 inline-block rounded-md text-neutral-color bg-btn-color hover:bg-btn-hover">Limpar</button>
         </nav>
         <ul class="flex flex-col gap-4 max-h-48 overflow-y-scroll">
         </ul>
